   * Fix: Trucks should stop mid-way if structure becomes finished (commit:312c7869f908f00484d6184221fa6ab0d37f1832, #914)
   * Fix: Moduled building demolishing power return (commit:91ce267100564a1d7ec0edb54294bd46a14d938e, #940)
   * Fix: "Cannot build. Resource burning" will pop up for each selected truck (commit:ee555f790f9e2363f71e1199aa99b3e2f072f145, #907)
 * Graphics:
   * Add: Allow shadows with these feature objects: artifact, boulder, and vehicle (commit:0e502341f099f78f2a0d81b158e0c0d225a54cdf, #635)
   * Add: Interpolate frames in animation (commit:b399fc362dcb202e341d7ddb73ea9e782b64e79a, #748)
   * Add: Occlude terrain ambiently (commit:ba0b8ce41712c146cab142c771fc796838ac0a96, #764)
   * Change: Replace little cyborg walking animation with super cyborg walking animation (commit:98582506106a76e6a1d11c0f874ea84c25f2a712, #819)
   * Change: Allow transparency for structure bases (commit:7a5a14c43ad83ba0eb0da56fe3301b9d921496df, #883)
   * Fix: Atmospheric effects should respect game time slowdown (commit:41c72f127d9b130c4fe9df901519728a7a1634d0, #913)
 * Campaign:
   * Add: Make campaign use dark unexplored tiles like before 3.1.1 (commit:15a032e9de9179f678dd3063151a040bd9e362c3, commit:5dd63b5fcd8dbffaea5087b5c89f88551b655937, #447, #529)
   * Change: Slow down factory production timers on Alpha 12 (commit:9fa9b8ca09e257cb96cc86a4ad937c3f8a1adfe7, #678)
   * Change: Increase Bunker-Buster ROF (commit:f0998eaad700fa88881e13d999d37c2261e14b63, #707)
   * Fix: Alpha 11 (cam1-7) failing to allow the player to win if getting the artifact too fast (commit:cd6d345eef01abf6343d7dc762ba6dfd4ee5ac05, #574)
   * Fix: Gamma missions 3, 4s (pre-away mission), and 5 did not game-over because of trucks stored at the end of the Gamma 2 scenario (commit:e0fb35b5a9ee445e5555482d58b37a97e95ce6c8, #588)